syntax = "proto3";

package k1s0.system.common.v1;

option go_package = "github.com/k1s0-platform/system-proto-go/common/v1;commonv1";

// Pagination はページネーションパラメータ。
message Pagination {
  int32 page = 1;
  int32 page_size = 2;
}

// PaginationResult はページネーション結果。
message PaginationResult {
  int64 total_count = 1;
  int32 page = 2;
  int32 page_size = 3;
  bool has_next = 4;
}
